# nd064_course_1

./: pyproject.toml
.github/workflows/: techtrends-dockerhub.yml
project/: Dockerfile  docker_commands
project/argocd/: helm-techtrends-prod.yaml  helm-techtrends-staging.yaml
project/helm/: Chart.yaml  values-prod.yaml  values-staging.yaml  values.yaml
project/helm/templates/: deployment.yaml  service.yaml
project/kubernetes/: deployment.yaml  namespace.yaml  service.yaml
project/techtrends/: app.py  database.db  logging.conf
